--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/ProductAddPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/ProductAddPopup.cshtml
@@ -77,21 +77,18 @@
                     .Name("products-grid")
                     .Columns(columns =>
                     {
-                        columns.Bound(x => x.Id)
-                        .Template(
-                                @<text>
-                                    <input name="SelectedProductIds" type="checkbox" value="@item.Id " />
-                                </text>
-                        )
-                        .ClientTemplate("<input type='checkbox' name='SelectedProductIds' value='<#= Id #>' />")
-                        .Title(T("Admin.Common.Check").Text)
-                        .Width(50);
-                        columns.Bound(x => x.Name);
+						columns.Bound(x => x.Id)
+							.Template(x => string.Format("<input type='checkbox' name='SelectedProductIds' value='{0}' class='checkboxGroups'/>", x.Id))
+							.ClientTemplate("<input type='checkbox' name='SelectedProductIds' value='<#= Id #>' class='checkboxGroups'/>")
+							.Width(50)
+							.HtmlAttributes(new { style = "text-align:center" });
+						columns.Bound(x => x.Name);
+						columns.Bound(x => x.Sku);
                         columns.Bound(x => x.Published)
-                            .Width("100px")
                             .Template(item => @Html.SymbolForBool(item.Published))
                             .ClientTemplate(@Html.SymbolForBool("Published"))
-                            .Centered();
+                            .Centered()
+							.Width(100);
                     })
                     .Pageable(settings => settings.Total(Model.Products.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("ProductAddPopupList", "Category"))
@@ -101,7 +98,8 @@
         </tr>
         <tr>
             <td colspan="2">
-                <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
+				<p></p>
+				<button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
             </td>
         </tr>
     </table>
