--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -357,6 +357,13 @@ input[type="color"],
 	vertical-align: text-top;
 }
 
+.label-smnet {
+	margin-right: 4px;
+}
+.label-smnet-hide {
+	display: none;
+}
+
 // JQUERY UI STUFF
 // -------------------------
 
