--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrderDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrderDetails.cshtml
@@ -6,6 +6,13 @@
     //page title
     ViewBag.Title = string.Format(T("Admin.Orders.Products.AddNew.Title2").Text, Model.Name, Model.OrderId);
 }
+
+<script type="text/javascript">
+	$(document).ready(function () {
+		$('#ProductAddAttributeContainer').find('select').selectWrapper();
+	});
+</script>
+
 @*we add enctype = "multipart/form-data" because "File upload" attribute control type requries it*@
 @using (Html.BeginForm("AddProductToOrderDetails", "Order",
     new RouteValueDictionary(new { orderId = Model.OrderId, productId = Model.ProductId }),
@@ -38,7 +45,7 @@
     <div class="clear">
     </div>
     
-    @if (Model.ProductType == ProductType.SimpleProduct)
+    if (Model.ProductType == ProductType.SimpleProduct)
     {
         <div>
 		    @*codehint: sm-edit*@
@@ -87,7 +94,7 @@
 		        
 		    <div class="clear"></div>
 
-            <div>
+            <div id="ProductAddAttributeContainer">
                 @Html.Partial("_ProductAddAttributes", Model.ProductVariantAttributes)
             </div>
             <div class="clear">
@@ -108,8 +115,13 @@
     else if (Model.ProductType == ProductType.GroupedProduct)
     {
         <div>
-            @*TODO add support for grouped products to be added to an existing order*@
-            Grouped products are not currently supported for adding to an existing order
+            Grouped products are not currently supported for adding to an existing order.	@* TODO TBD *@
+        </div>
+    }
+    else if (Model.ProductType == ProductType.BundledProduct)
+    {
+        <div>
+            Bundled products are not currently supported for adding to an existing order.	@* TODO TBD *@
         </div>
     }
     else
