--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
@@ -32,8 +32,8 @@
                         {
                             columns.Bound(x => x.ProductName)
                                 .ReadOnly()
-                                .Template(x => Html.ActionLink(x.ProductName, "Edit", "Product", new { id = x.Id }, new { }))
-                                .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Product/Edit/") + "<#= Id #>\"><#= ProductName #></a>");
+								.Template(x => @Html.LabeledProductName(x.Id, x.ProductName, x.ProductTypeName, x.ProductTypeLabelHint))
+								.ClientTemplate(@Html.LabeledProductName("Id", "ProductName"));
                             columns.Bound(x => x.Sku)
                                 .ReadOnly();
                             columns.Bound(x => x.Published)
