--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -90,11 +90,11 @@
                             @if (Model.DisplayDeliveryTime)
                             {
                                 <div class="delivery-time">
-                                    @if (item.DeliveryTime != null && item.IsShipEnabled)
+                                    @if ((!String.IsNullOrEmpty(item.DeliveryTimeName) && !String.IsNullOrEmpty(item.DeliveryTimeHexValue)) && item.IsShipEnabled)
                                     {
                                         <span class="delivery-time-label">@T("Products.DeliveryTime")</span>
-                                        <span class="delivery-time-color" style="background-color:@item.DeliveryTime.ColorHexValue" title="@item.DeliveryTime.Name"></span>
-                                        <span class="delivery-time-value">@item.DeliveryTime.Name</span>
+                                        <span class="delivery-time-color" style="background-color:@item.DeliveryTimeHexValue" title="@item.DeliveryTimeName"></span>
+                                        <span class="delivery-time-value">@item.DeliveryTimeName</span>
                                     }
                                 </div>
                             }
