--- a/src/Presentation/SmartStore.Web/Views/Catalog/_AddToCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_AddToCart.cshtml
@@ -79,14 +79,14 @@
             @if (Model.DisplayDeliveryTime) 
             {
                 <div class="delivery-time">
-                    @if (Model.DeliveryTime != null && Model.IsShipEnabled)
+                    @if ((!String.IsNullOrEmpty(Model.DeliveryTimeName) && !String.IsNullOrEmpty(Model.DeliveryTimeHexValue)) && Model.IsShipEnabled)
                     {
                         <span class="delivery-time-label">@T("Products.DeliveryTime")</span>
                     
                         if (Model.DisplayDeliveryTimeAccordingToStock)
                         {
-                            <span class="delivery-time-color" style="background-color:@Model.DeliveryTime.ColorHexValue" title="@Model.DeliveryTime.Name"></span>
-                            <span class="delivery-time-value">@Model.DeliveryTime.Name</span>
+                            <span class="delivery-time-color" style="background-color:@Model.DeliveryTimeHexValue" title="@Model.DeliveryTimeName"></span>
+                            <span class="delivery-time-value">@Model.DeliveryTimeName</span>
                         } 
                         else
                         {
